# cwc

./: LICENSE  README.md
cwc-client/: .env  index.html  package-lock.json  package.json
cwc-client/src/: App.vue
cwc-client/src/assets/: style.scss
cwc-client/src/components/: ContinuousWaveChatClient.vue
cwc-server/: pyproject.toml
cwc-server/src/cwc_server/: __init__.py
cwc-server/tests/: send.py  test_chat.py
